--- a/src/en/recommend/index.html
+++ b/src/en/recommend/index.html
@@ -6,7 +6,25 @@ permalink: /vpn/en/recommend/
 lang: en
 ---
 
-<h1>VPN recommendations & reviews (2026): pick by scenario</h1>
+<div class="page-hero">
+  <div class="page-hero-header">
+    <div class="page-hero-header-title">VPN Reviews</div>
+  </div>
+
+  <section class="page-hero-banner" aria-label="VPN recommendations banner">
+    <div class="page-hero-banner-inner">
+      <div>
+        <h1 class="page-hero-banner-title">Best VPN recommendations (2026)</h1>
+        <ul class="page-hero-banner-points">
+          <li>Pick by scenario: work, study, SaaS, AI tools</li>
+          <li>Privacy protection and public Wi‑Fi safety</li>
+          <li>Prefer providers with a refund window to reduce risk</li>
+        </ul>
+      </div>
+      <img class="page-hero-banner-img" src="/assets/images/banner_vpn.jpg" alt="VPN banner" loading="lazy" />
+    </div>
+  </section>
+</div>
 
 <div class="notice">
   Note: This page provides reviews and information about VPN / network privacy tools for legitimate use cases such as privacy protection and connection security. Laws and policies vary by region. Please comply with applicable laws and terms of service.
@@ -149,76 +167,120 @@ lang: en
   These are the options we consider easier to recommend for most users because they balance stability, onboarding experience, and long‑term value.
 </p>
 
-<div style="display:flex; flex-direction:column; gap: 12px;">
-  <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 14px; background: #fff;">
-    <div style="display:flex; justify-content:space-between; gap: 12px; align-items:flex-start;">
-      <div>
-        <div style="font-size: 18px; font-weight: 700;">PureVPN <span style="font-size: 18px; font-weight: 600; color: #b45309;">Recommended</span></div>
-        <div style="margin-top: 4px;">Rating: <strong>⭐⭐⭐⭐⭐</strong></div>
+<div class="vpn-cards">
+  <div class="vpn-card">
+    <div class="vpn-card-rank">1</div>
+    <div class="vpn-card-main">
+      <div class="vpn-card-brand">
+        <img class="vpn-card-logo" src="/assets/images/purevpn_logo.png" alt="PureVPN logo" />
+        <div>
+          <div class="vpn-card-name">PureVPN <span style="font-weight: 800; color: #b45309;">Recommended</span></div>
+          <div class="vpn-card-sub">Balanced long‑term pick · 🛡️ 31‑day refund</div>
+          <div class="vpn-card-platforms">
+            <span class="vpn-tag">Windows</span><span class="vpn-tag">macOS</span><span class="vpn-tag">iOS</span><span class="vpn-tag">Android</span><span class="vpn-tag">Router</span>
+          </div>
+        </div>
       </div>
-      <div style="text-align:right; color: rgba(0,0,0,0.65);">🛡️ 31‑day refund</div>
     </div>
-    <div style="margin-top: 10px; line-height: 1.7;">
-      <div><strong>Why:</strong> a well‑balanced pick across price, features, privacy, and long‑term usability</div>
-      <div><strong>Best for:</strong> a first VPN or a “choose once, use long‑term” option with less regret</div>
+    <div class="vpn-card-features">
+      <div class="vpn-card-features-title">Key features</div>
+      <ul>
+        <li>Balanced across price, features, privacy and usability</li>
+        <li>Enough nodes to settle into a reliable setup</li>
+        <li>Easy refund window for a first VPN try</li>
+      </ul>
     </div>
-    <div style="margin-top: 12px; display:flex; gap: 10px; flex-wrap: wrap;">
-      <a href="{{ go_defaults.purevpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 10px 14px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check PureVPN pricing</a>
-      <a href="/vpn/en/posts/purevpn-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read PureVPN review</a>
+    <div class="vpn-card-cta">
+      <div class="vpn-card-score">⭐ 9.6</div>
+      <a class="vpn-card-cta-btn" href="{{ go_defaults.purevpn }}" target="_blank" rel="nofollow sponsored">Visit official site&gt;&gt;</a>
+      <a class="vpn-card-cta-secondary" href="/vpn/en/posts/purevpn-review/">Read review</a>
     </div>
   </div>
 
-  <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 14px; background: #fff;">
-    <div style="display:flex; justify-content:space-between; gap: 12px; align-items:flex-start;">
-      <div>
-        <div style="font-size: 18px; font-weight: 700;">NordVPN <span style="font-size: 18px; font-weight: 600; color: #0f766e;">Reliable</span></div>
-        <div style="margin-top: 4px;">Rating: <strong>⭐⭐⭐⭐⭐</strong></div>
+  <div class="vpn-card">
+    <div class="vpn-card-rank">2</div>
+    <div class="vpn-card-main">
+      <div class="vpn-card-brand">
+        <img class="vpn-card-logo" src="/assets/images/nordvpn_logo.jpeg" alt="NordVPN logo" />
+        <div>
+          <div class="vpn-card-name">NordVPN <span style="font-weight: 800; color: #0f766e;">Reliable</span></div>
+          <div class="vpn-card-sub">Mature apps &amp; strong network · 🛡️ 30‑day refund</div>
+          <div class="vpn-card-platforms">
+            <span class="vpn-tag">Windows</span><span class="vpn-tag">macOS</span><span class="vpn-tag">iOS</span><span class="vpn-tag">Android</span><span class="vpn-tag">Linux</span>
+          </div>
+        </div>
       </div>
-      <div style="text-align:right; color: rgba(0,0,0,0.65);">🛡️ 30‑day refund</div>
     </div>
-    <div style="margin-top: 10px; line-height: 1.7;">
-      <div><strong>Why:</strong> mature apps + strong global network</div>
-      <div><strong>Best for:</strong> first‑time buyers who want a safer all‑round choice</div>
+    <div class="vpn-card-features">
+      <div class="vpn-card-features-title">Key features</div>
+      <ul>
+        <li>Strong global coverage and good redundancy</li>
+        <li>Easy onboarding for first‑time buyers</li>
+        <li>A safer all‑round option for reliability</li>
+      </ul>
     </div>
-    <div style="margin-top: 12px; display:flex; gap: 10px; flex-wrap: wrap;">
-      <a href="{{ go_defaults.nordvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 10px 14px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check NordVPN deals</a>
-      <a href="/vpn/en/posts/nordvpn-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read NordVPN review</a>
+    <div class="vpn-card-cta">
+      <div class="vpn-card-score">⭐ 9.5</div>
+      <a class="vpn-card-cta-btn" href="{{ go_defaults.nordvpn }}" target="_blank" rel="nofollow sponsored">Visit official site&gt;&gt;</a>
+      <a class="vpn-card-cta-secondary" href="/vpn/en/posts/nordvpn-review/">Read review</a>
     </div>
   </div>
 
-  <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 14px; background: #fff;">
-    <div style="display:flex; justify-content:space-between; gap: 12px; align-items:flex-start;">
-      <div>
-        <div style="font-size: 18px; font-weight: 700;">Surfshark <span style="font-size: 18px; font-weight: 600; color: #2563eb;">Best value</span></div>
-        <div style="margin-top: 4px;">Rating: <strong>⭐⭐⭐⭐</strong></div>
+  <div class="vpn-card">
+    <div class="vpn-card-rank">3</div>
+    <div class="vpn-card-main">
+      <div class="vpn-card-brand">
+        <img class="vpn-card-logo" src="/assets/images/surfsharkvpn_logo.jpeg" alt="Surfshark logo" />
+        <div>
+          <div class="vpn-card-name">Surfshark <span style="font-weight: 800; color: #2563eb;">Best value</span></div>
+          <div class="vpn-card-sub">Great for multiple devices · 🛡️ 30‑day refund</div>
+          <div class="vpn-card-platforms">
+            <span class="vpn-tag">Windows</span><span class="vpn-tag">macOS</span><span class="vpn-tag">iOS</span><span class="vpn-tag">Android</span>
+          </div>
+        </div>
       </div>
-      <div style="text-align:right; color: rgba(0,0,0,0.65);">🛡️ 30‑day refund</div>
     </div>
-    <div style="margin-top: 10px; line-height: 1.7;">
-      <div><strong>Why:</strong> good pricing + great for multiple devices</div>
-      <div><strong>Best for:</strong> families and users with many devices</div>
+    <div class="vpn-card-features">
+      <div class="vpn-card-features-title">Key features</div>
+      <ul>
+        <li>Best fit for families and multiple devices</li>
+        <li>Good everyday use, overall decent performance</li>
+        <li>Budget-friendly without feeling too barebones</li>
+      </ul>
     </div>
-    <div style="margin-top: 12px; display:flex; gap: 10px; flex-wrap: wrap;">
-      <a href="{{ go_defaults.surfshark }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 10px 14px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check Surfshark deals</a>
-      <a href="/vpn/en/posts/surfshark-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read Surfshark review</a>
+    <div class="vpn-card-cta">
+      <div class="vpn-card-score">⭐ 9.1</div>
+      <a class="vpn-card-cta-btn" href="{{ go_defaults.surfshark }}" target="_blank" rel="nofollow sponsored">Visit official site&gt;&gt;</a>
+      <a class="vpn-card-cta-secondary" href="/vpn/en/posts/surfshark-review/">Read review</a>
     </div>
   </div>
 
-  <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 14px; background: #fff;">
-    <div style="display:flex; justify-content:space-between; gap: 12px; align-items:flex-start;">
-      <div>
-        <div style="font-size: 18px; font-weight: 700;">Proton VPN <span style="font-size: 18px; font-weight: 600; color: #111827;">Security‑first</span></div>
-        <div style="margin-top: 4px;">Rating: <strong>⭐⭐⭐⭐</strong></div>
+  <div class="vpn-card">
+    <div class="vpn-card-rank">4</div>
+    <div class="vpn-card-main">
+      <div class="vpn-card-brand">
+        <img class="vpn-card-logo" src="/assets/images/protonvpn_logo.svg" alt="Proton VPN logo" />
+        <div>
+          <div class="vpn-card-name">Proton VPN <span style="font-weight: 800; color: #111827;">Security‑first</span></div>
+          <div class="vpn-card-sub">Privacy‑oriented choice · 🛡️ 30‑day refund</div>
+          <div class="vpn-card-platforms">
+            <span class="vpn-tag">Windows</span><span class="vpn-tag">macOS</span><span class="vpn-tag">iOS</span><span class="vpn-tag">Android</span><span class="vpn-tag">Linux</span>
+          </div>
+        </div>
       </div>
-      <div style="text-align:right; color: rgba(0,0,0,0.65);">🛡️ 30‑day refund</div>
     </div>
-    <div style="margin-top: 10px; line-height: 1.7;">
-      <div><strong>Why:</strong> privacy‑oriented design and strong security features</div>
-      <div><strong>Best for:</strong> users who care more about privacy than the cheapest price</div>
+    <div class="vpn-card-features">
+      <div class="vpn-card-features-title">Key features</div>
+      <ul>
+        <li>Privacy posture and security features</li>
+        <li>Clear logging policy and transparency focus</li>
+        <li>Better if privacy matters more than cheapest price</li>
+      </ul>
     </div>
-    <div style="margin-top: 12px; display:flex; gap: 10px; flex-wrap: wrap;">
-      <a href="{{ go_defaults.protonvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 10px 14px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">Check Proton VPN plans</a>
-      <a href="/vpn/en/posts/protonvpn-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">Read Proton VPN review</a>
+    <div class="vpn-card-cta">
+      <div class="vpn-card-score">⭐ 9.0</div>
+      <a class="vpn-card-cta-btn" href="{{ go_defaults.protonvpn }}" target="_blank" rel="nofollow sponsored">Visit official site&gt;&gt;</a>
+      <a class="vpn-card-cta-secondary" href="/vpn/en/posts/protonvpn-review/">Read review</a>
     </div>
   </div>
 </div>
