--- a/src/recommend/index.html
+++ b/src/recommend/index.html
@@ -1,17 +1,28 @@
 ---
 layout: base.njk
 title: VPN 推荐与评测
-description: 面向普通用户的 VPN 推荐与评测：按使用场景快速选型，包含总览、闭眼选系列、跨境系列与常见问题。
+description: 面向普通用户的 VPN 推荐与评测：按使用场景快速选型，包含总览、闭眼入系列、跨境系列与常见问题。
 permalink: /vpn/recommend/
 ---
 
-<h1>VPN 推荐与评测：按使用场景快速选型（2026）</h1>
-
-<div style="margin: 10px 0 16px; padding: 10px 12px; border: 1px solid rgba(0,0,0,0.12); border-radius: 8px; background: rgba(0,0,0,0.03);">
-  <div style="line-height: 1.7;">
-    提示：本页是面向<strong>跨境办公 / 学习</strong>、<strong>海外 SaaS / AI 工具</strong>、<strong>流媒体与内容平台</strong>、以及<strong>公共 Wi-Fi 安全与隐私保护</strong>等需求的 VPN 选型与购买参考。
-    你可以直接从「闭眼选不踩坑」先选一款开始试用（优先选有退款保障的），减少踩坑与试错成本。
+<div class="page-hero">
+  <div class="page-hero-header">
+    <div class="page-hero-header-title">VPN评测</div>
   </div>
+
+  <section class="page-hero-banner" aria-label="VPN 推荐 Banner">
+    <div class="page-hero-banner-inner">
+      <div>
+        <h1 class="page-hero-banner-title">2026年最佳 VPN 推荐</h1>
+        <ul class="page-hero-banner-points">
+          <li>适合跨境办公 / 学习 / 海外 SaaS / AI 工具</li>
+          <li>公共 Wi‑Fi 安全与隐私保护</li>
+          <li>优先选择提供退款保障的服务，降低试错成本</li>
+        </ul>
+      </div>
+      <img class="page-hero-banner-img" src="/assets/images/banner_vpn.jpg" alt="VPN banner" loading="lazy" />
+    </div>
+  </section>
 </div>
 
 <div style="margin: 12px 0 16px; padding: 12px 12px; border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; background: rgba(0,0,0,0.02);">
@@ -19,8 +30,8 @@ permalink: /vpn/recommend/
   <div style="display:flex; flex-direction: column; gap: 6px; line-height: 1.7;">
     <a href="#why">1. 为什么要做这份 VPN 评测</a>
     <a href="#overview">2. VPN 总览</a>
-    <a href="#mainland-guide">3. 如何根据不同使用场景选择 VPN</a>
-    <a href="#quick-table">4. 不同使用场景下的 VPN 快速选择对照表</a>
+    <a href="#mainland-guide">3. 根据使用场景选择 VPN</a>
+    <a href="#quick-table">4. 快速选择对照表</a>
     <a href="#top">5. 闭眼入系列</a>
     <a href="#cross-border">6. 跨境网络防护系列</a>
     <a href="#secondary">7. 备选系列</a>
@@ -117,7 +128,7 @@ permalink: /vpn/recommend/
   </li>
 </ul>
 
-<h2 id="mainland-guide">🧭三、 如何根据不同使用场景选择 VPN</h2>
+<h2 id="mainland-guide">🧭三、 根据使用场景选择 VPN</h2>
 
 <p>
 在不同网络条件下，不同 VPN 在不同使用场景中的表现差异明显。
@@ -139,7 +150,7 @@ permalink: /vpn/recommend/
   <li><strong>ExpressVPN</strong> — 成熟协议，整体可靠</li>
 </ul>
 
-<h2 id="quick-table">🗂️四、 不同使用场景下的 VPN 快速选择对照表</h2>
+<h2 id="quick-table">🗂️四、 快速选择对照表</h2>
 
 <table border="1" cellpadding="8" cellspacing="0">
   <thead>
@@ -185,82 +196,145 @@ permalink: /vpn/recommend/
 
 <h2 id="top">🥇五、 闭眼入系列</h2>
 
-<p style="margin: 0 0 12px; color: rgba(0,0,0,0.72); line-height: 1.7;">这 4 款之所以放在闭眼选系列，不是因为它们一定最便宜或参数最夸张，而是综合了<strong>稳定性</strong>、<strong>上手成本</strong>、<strong>长期性价比</strong>与<strong>售后保障</strong>等因素：对大多数用户来说更不容易踩坑。如果你不想花时间做复杂对比，优先从这 4 款里选，成功率通常更高。</p>
+<p style="margin: 0 0 12px; color: rgba(0,0,0,0.72); line-height: 1.7;">这 4 款之所以放在闭眼入系列，不是因为它们一定最便宜或参数最夸张，而是综合了<strong>稳定性</strong>、<strong>上手成本</strong>、<strong>长期性价比</strong>与<strong>售后保障</strong>等因素：对大多数用户来说更不容易踩坑。如果你不想花时间做复杂对比，优先从这 4 款里选，成功率通常更高。</p>
 
-<div style="display:flex; flex-direction:column; gap: 12px;">
-  <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 14px; background: #fff;">
-    <div style="display:flex; justify-content:space-between; gap: 12px; align-items:flex-start;">
-      <div>
-        <div style="font-size: 18px; font-weight: 700;">PureVPN <span style="font-size: 18px; font-weight: 600; color: #b45309;">🥇 最推荐</span></div>
-        <div style="margin-top: 4px;">推荐指数：<strong>⭐⭐⭐⭐⭐</strong></div>
+<div class="vpn-cards">
+  <div class="vpn-card">
+    <div class="vpn-card-rank">1</div>
+    <div class="vpn-card-main">
+      <div class="vpn-card-brand">
+        <img class="vpn-card-logo" src="/assets/images/purevpn_logo.png" alt="PureVPN logo" />
+        <div>
+          <div class="vpn-card-name">PureVPN <span style="font-weight: 800; color: #b45309;">🥇 最推荐</span></div>
+          <div class="vpn-card-sub">更均衡的长期方案 · 🛡️ 31 天退款</div>
+          <div class="vpn-card-platforms">
+            <span class="vpn-tag">Windows</span>
+            <span class="vpn-tag">macOS</span>
+            <span class="vpn-tag">iOS</span>
+            <span class="vpn-tag">Android</span>
+            <span class="vpn-tag">Router</span>
+          </div>
+        </div>
       </div>
-      <div style="text-align:right; color: rgba(0,0,0,0.65);">🛡️ 31 天退款</div>
     </div>
-    <div style="margin-top: 10px; line-height: 1.7;">
-      <div><strong>核心卖点：</strong>价格、功能、隐私与长期体验更均衡（更适合“一次选择、长期使用”）</div>
-      <div><strong>当前优惠：</strong>常见大幅折扣（以官网实时活动为准）</div>
-      <div><strong>适合人群：</strong>想选第一款/长期使用 / 不想每年折腾换 VPN / 希望少踩坑</div>
+
+    <div class="vpn-card-features">
+      <div class="vpn-card-features-title">功能特性</div>
+      <ul>
+        <li>价格、功能、隐私与长期体验更均衡</li>
+        <li>节点覆盖足够广，适合长期固定使用</li>
+        <li>退款保障更友好，适合作为第一款</li>
+      </ul>
     </div>
-    <div style="margin-top: 12px; display:flex; gap: 10px; flex-wrap: wrap;">
-      <a href="{{ go_defaults.purevpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 10px 14px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 PureVPN 最低价</a>
-      <a href="/vpn/posts/purevpn-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 PureVPN 评测</a>
+
+    <div class="vpn-card-cta">
+      <div class="vpn-card-score">⭐ 9.6</div>
+      <a class="vpn-card-cta-btn" href="{{ go_defaults.purevpn }}" target="_blank" rel="nofollow sponsored">访问官网&gt;&gt;</a>
+      <a class="vpn-card-cta-secondary" href="/vpn/posts/purevpn-review/">查看评测</a>
     </div>
   </div>
 
-  <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 14px; background: #fff;">
-    <div style="display:flex; justify-content:space-between; gap: 12px; align-items:flex-start;">
-      <div>
-        <div style="font-size: 18px; font-weight: 700;">NordVPN <span style="font-size: 18px; font-weight: 600; color: #0f766e;">🛡️ 大牌稳妥</span></div>
-        <div style="margin-top: 4px;">推荐指数：<strong>⭐⭐⭐⭐⭐</strong></div>
+  <div class="vpn-card">
+    <div class="vpn-card-rank">2</div>
+    <div class="vpn-card-main">
+      <div class="vpn-card-brand">
+        <img class="vpn-card-logo" src="/assets/images/nordvpn_logo.jpeg" alt="NordVPN logo" />
+        <div>
+          <div class="vpn-card-name">NordVPN <span style="font-weight: 800; color: #0f766e;">🛡️ 大牌稳妥</span></div>
+          <div class="vpn-card-sub">成熟客户端与稳定网络 · 🛡️ 30 天退款</div>
+          <div class="vpn-card-platforms">
+            <span class="vpn-tag">Windows</span>
+            <span class="vpn-tag">macOS</span>
+            <span class="vpn-tag">iOS</span>
+            <span class="vpn-tag">Android</span>
+            <span class="vpn-tag">Linux</span>
+          </div>
+        </div>
       </div>
-      <div style="text-align:right; color: rgba(0,0,0,0.65);">🛡️ 30 天退款</div>
     </div>
-    <div style="margin-top: 10px; line-height: 1.7;">
-      <div><strong>核心卖点：</strong>品牌力强 + 体验成熟（适合“就想选个更稳的”）</div>
-      <div><strong>当前优惠：</strong>常年大折扣（以官网实时活动为准）</div>
-      <div><strong>适合人群：</strong>普通用户 / 第一次购买 / 更看重稳妥感</div>
+
+    <div class="vpn-card-features">
+      <div class="vpn-card-features-title">功能特性</div>
+      <ul>
+        <li>品牌与网络基建成熟，上手成本低</li>
+        <li>全球节点覆盖强，跨境场景更稳</li>
+        <li>适合第一次购买、想要更稳妥的人</li>
+      </ul>
     </div>
-    <div style="margin-top: 12px; display:flex; gap: 10px; flex-wrap: wrap;">
-      <a href="{{ go_defaults.nordvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 10px 14px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 NordVPN 优惠</a>
-      <a href="/vpn/posts/nordvpn-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 NordVPN 评测</a>
+
+    <div class="vpn-card-cta">
+      <div class="vpn-card-score">⭐ 9.5</div>
+      <a class="vpn-card-cta-btn" href="{{ go_defaults.nordvpn }}" target="_blank" rel="nofollow sponsored">访问官网&gt;&gt;</a>
+      <a class="vpn-card-cta-secondary" href="/vpn/posts/nordvpn-review/">查看评测</a>
     </div>
   </div>
 
-  <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 14px; background: #fff;">
-    <div style="display:flex; justify-content:space-between; gap: 12px; align-items:flex-start;">
-      <div>
-        <div style="font-size: 18px; font-weight: 700;">Surfshark <span style="font-size: 18px; font-weight: 600; color: #2563eb;">💰 性价比最高</span></div>
-        <div style="margin-top: 4px;">推荐指数：<strong>⭐⭐⭐⭐</strong></div>
+  <div class="vpn-card">
+    <div class="vpn-card-rank">3</div>
+    <div class="vpn-card-main">
+      <div class="vpn-card-brand">
+        <img class="vpn-card-logo" src="/assets/images/surfsharkvpn_logo.jpeg" alt="Surfshark logo" />
+        <div>
+          <div class="vpn-card-name">Surfshark <span style="font-weight: 800; color: #2563eb;">💰 性价比最高</span></div>
+          <div class="vpn-card-sub">多设备更划算 · 🛡️ 30 天退款</div>
+          <div class="vpn-card-platforms">
+            <span class="vpn-tag">Windows</span>
+            <span class="vpn-tag">macOS</span>
+            <span class="vpn-tag">iOS</span>
+            <span class="vpn-tag">Android</span>
+          </div>
+        </div>
       </div>
-      <div style="text-align:right; color: rgba(0,0,0,0.65);">🛡️ 30 天退款</div>
     </div>
-    <div style="margin-top: 10px; line-height: 1.7;">
-      <div><strong>核心卖点：</strong>多设备更划算（家庭/多设备用户很容易成交）</div>
-      <div><strong>当前优惠：</strong>活动期折扣力度更大（以官网实时活动为准）</div>
-      <div><strong>适合人群：</strong>多设备用户 / 家庭用户 / 预算敏感</div>
+
+    <div class="vpn-card-features">
+      <div class="vpn-card-features-title">功能特性</div>
+      <ul>
+        <li>更适合多设备/家庭用户的使用模式</li>
+        <li>体验友好，适合日常上网与轻度跨境</li>
+        <li>预算敏感、但希望功能够用的选择</li>
+      </ul>
     </div>
-    <div style="margin-top: 12px; display:flex; gap: 10px; flex-wrap: wrap;">
-      <a href="{{ go_defaults.surfshark }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 10px 14px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 Surfshark 优惠</a>
-      <a href="/vpn/posts/surfshark-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 Surfshark 评测</a>
+
+    <div class="vpn-card-cta">
+      <div class="vpn-card-score">⭐ 9.1</div>
+      <a class="vpn-card-cta-btn" href="{{ go_defaults.surfshark }}" target="_blank" rel="nofollow sponsored">访问官网&gt;&gt;</a>
+      <a class="vpn-card-cta-secondary" href="/vpn/posts/surfshark-review/">查看评测</a>
     </div>
   </div>
 
-  <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 14px; background: #fff;">
-    <div style="display:flex; justify-content:space-between; gap: 12px; align-items:flex-start;">
-      <div>
-        <div style="font-size: 18px; font-weight: 700;">Proton VPN <span style="font-size: 18px; font-weight: 600; color: #111827;">🛡️ 安全优先</span></div>
-        <div style="margin-top: 4px;">推荐指数：<strong>⭐⭐⭐⭐</strong></div>
+  <div class="vpn-card">
+    <div class="vpn-card-rank">4</div>
+    <div class="vpn-card-main">
+      <div class="vpn-card-brand">
+        <img class="vpn-card-logo" src="/assets/images/protonvpn_logo.svg" alt="Proton VPN logo" />
+        <div>
+          <div class="vpn-card-name">Proton VPN <span style="font-weight: 800; color: #111827;">🛡️ 安全优先</span></div>
+          <div class="vpn-card-sub">隐私取向更强 · 🛡️ 30 天退款</div>
+          <div class="vpn-card-platforms">
+            <span class="vpn-tag">Windows</span>
+            <span class="vpn-tag">macOS</span>
+            <span class="vpn-tag">iOS</span>
+            <span class="vpn-tag">Android</span>
+            <span class="vpn-tag">Linux</span>
+          </div>
+        </div>
       </div>
-      <div style="text-align:right; color: rgba(0,0,0,0.65);">🛡️ 30 天退款</div>
     </div>
-    <div style="margin-top: 10px; line-height: 1.7;">
-      <div><strong>核心卖点：</strong>更适合注重隐私与安全特性的用户（愿意为安全功能多了解一些说明）</div>
-      <div><strong>当前优惠：</strong>以官网实时活动为准</div>
-      <div><strong>适合人群：</strong>隐私/安全取向 / 对安全功能更在意的用户</div>
+
+    <div class="vpn-card-features">
+      <div class="vpn-card-features-title">功能特性</div>
+      <ul>
+        <li>更偏隐私保护与安全特性的人群</li>
+        <li>适合对日志/透明度更在意的用户</li>
+        <li>愿意为安全功能多了解一些说明</li>
+      </ul>
     </div>
-    <div style="margin-top: 12px; display:flex; gap: 10px; flex-wrap: wrap;">
-      <a href="{{ go_defaults.protonvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 10px 14px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 Proton VPN 方案</a>
-      <a href="/vpn/posts/protonvpn-review/" style="display:inline-block; padding: 10px 14px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看 Proton VPN 评测</a>
+
+    <div class="vpn-card-cta">
+      <div class="vpn-card-score">⭐ 9.0</div>
+      <a class="vpn-card-cta-btn" href="{{ go_defaults.protonvpn }}" target="_blank" rel="nofollow sponsored">访问官网&gt;&gt;</a>
+      <a class="vpn-card-cta-secondary" href="/vpn/posts/protonvpn-review/">查看评测</a>
     </div>
   </div>
 </div>
@@ -327,60 +401,6 @@ permalink: /vpn/recommend/
 </div>
 
 <blockquote>
-  💡 <strong>减少试错：</strong>如果你已经明确自己的使用场景，可以从我们评测中表现较稳定的 VPN 开始尝试，优先选择提供退款保障或灵活订阅方案的服务，降低试错成本。
-  <br />
-  <a href="/vpn/review-methodology/">查看我们如何评测与排序</a>
-</blockquote>
-
-<h2 id="secondary">🧩七、 备选系列</h2>
-
-<blockquote>
-  这 7 款更适合作为备选清单：按不同偏好与使用场景来选，避免只盯着同一款。
-</blockquote>
-
-<div style="display:flex; flex-direction:column; gap: 10px;">
-  <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 12px; background: #fff;">
-    <div style="font-weight: 800;">🧑‍💼 高端省心（商务/长期稳定）— <span style="font-weight: 900; color: #111827;">ExpressVPN</span></div>
-    <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">更偏“开箱即用、少折腾”的选择，适合对稳定体验更敏感的用户。</div>
-    <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
-      <a href="{{ go_defaults.expressvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 ExpressVPN</a>
-      <a href="/vpn/posts/expressvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
-    </div>
-  </div>
-
-  <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 12px; background: #fff;">
-    <div style="font-weight: 800;">📺 流媒体/场景化服务器（少试错）— <span style="font-weight: 900; color: #111827;">CyberGhost</span></div>
-    <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">如果你希望有更明确的“流媒体/用途入口”，CyberGhost 的场景化思路更容易上手；它属于主流大市场品牌，但通常不算“顶级榜单常客”。</div>
-    <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
-      <a href="{{ go_defaults.cyberghost }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 CyberGhost</a>
-      <a href="/vpn/posts/cyberghost-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
-    </div>
-  </div>
-
-  <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 12px; background: #fff;">
-    <div style="font-weight: 800;">🧰 技术/可配置（分流/端口等）— <span style="font-weight: 900; color: #111827;">PIA</span></div>
-    <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">更适合愿意自己调参数、对分流/端口等进阶功能有明确需求的人；它属于主流品牌，偏“工具箱”，但通常不属于顶级省心那一档。</div>
-    <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
-      <a href="{{ go_defaults.pia }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 PIA</a>
-      <a href="/vpn/posts/pia-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
-    </div>
-  </div>
-
-  <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 12px; background: #fff;">
-    <div style="font-weight: 800;">🎁 促销型/预算敏感（先低成本试用）— <span style="font-weight: 900; color: #111827;">Ivacy VPN</span></div>
-    <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">更适合预算敏感、想先用更低成本试用的用户；如果你之后确定长期需求，再考虑升级到更全面的方案。</div>
-    <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
-      <a href="{{ go_defaults.ivacy }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 Ivacy VPN</a>
-      <a href="/vpn/posts/ivacy-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
-    </div>
-  </div>
-
-  <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 12px; background: #fff;">
-    <div style="font-weight: 800;">🕶️ 极简匿名注册（隐私优先）— <span style="font-weight: 900; color: #111827;">Mullvad</span></div>
-    <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">更适合特别看重匿名性、并且愿意按官方说明配置的用户；对新手来说上手门槛会更高一些。</div>
-    <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
-      <a href="{{ go_defaults.mullvad }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 Mullvad</a>
-      <a href="/vpn/posts/mullvad-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">看评测与功能</a>
     </div>
   </div>
 
