--- a/src/recommend/index.html
+++ b/src/recommend/index.html
@@ -201,7 +201,7 @@ permalink: /vpn/recommend/
       <div class="vpn-card-refund">🛡️ 31 天退款</div>
     </div>
 
-    <div class="vpn-platforms">
+    <div class="vpn-platforms vpn-platforms-grid">
       <span class="chip">Windows</span><span class="chip">macOS</span><span class="chip">iOS</span><span class="chip">Android</span><span class="chip">Linux</span><span class="chip">Router</span>
     </div>
 
@@ -236,7 +236,7 @@ permalink: /vpn/recommend/
       <div class="vpn-card-refund">🛡️ 30 天退款</div>
     </div>
 
-    <div class="vpn-platforms">
+    <div class="vpn-platforms vpn-platforms-grid">
       <span class="chip">Windows</span><span class="chip">macOS</span><span class="chip">iOS</span><span class="chip">Android</span><span class="chip">Linux</span>
     </div>
 
@@ -271,7 +271,7 @@ permalink: /vpn/recommend/
       <div class="vpn-card-refund">🛡️ 30 天退款</div>
     </div>
 
-    <div class="vpn-platforms">
+    <div class="vpn-platforms vpn-platforms-grid">
       <span class="chip">Windows</span><span class="chip">macOS</span><span class="chip">iOS</span><span class="chip">Android</span>
     </div>
 
@@ -306,7 +306,7 @@ permalink: /vpn/recommend/
       <div class="vpn-card-refund">🛡️ 30 天退款</div>
     </div>
 
-    <div class="vpn-platforms">
+    <div class="vpn-platforms vpn-platforms-grid">
       <span class="chip">Windows</span><span class="chip">macOS</span><span class="chip">iOS</span><span class="chip">Android</span><span class="chip">Linux</span>
     </div>
 
