--- a/src/recommend/index.html
+++ b/src/recommend/index.html
@@ -400,6 +400,59 @@ permalink: /vpn/recommend/
   <a href="/vpn/review-methodology/">查看我们如何评测与排序</a>
 </blockquote>
 
+<h2 id="secondary">🧩七、 备选系列</h2>
+
+<blockquote>
+  🧩 <strong>说明：</strong>备选系列更适合作为“第二梯队”与补位选择：当你对价格、隐私、可配置性或使用偏好有明确取向时，再从这里按需挑选，而不是强行追求一款“适合所有人”的 VPN。
+</blockquote>
+
+<div style="display:flex; flex-direction:column; gap: 10px;">
+  <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 12px; background: #fff;">
+    <div style="font-weight: 800;">📺 场景服务器更友好（流媒体/常见用途） — <span style="font-weight: 900; color: #111827;">CyberGhost</span></div>
+    <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">如果你更偏向“打开就用”，并且想要更直观的场景入口（如流媒体、浏览等），CyberGhost 的定位会更贴近这种需求。</div>
+    <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
+      <a href="{{ go_defaults.cyberghost }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 CyberGhost</a>
+      <a href="/vpn/posts/cyberghost-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看评测</a>
+    </div>
+  </div>
+
+  <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 12px; background: #fff;">
+    <div style="font-weight: 800;">🛠️ 可配置与高级用户取向 — <span style="font-weight: 900; color: #111827;">PIA</span></div>
+    <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">如果你更愿意自己折腾配置、在意可调参数与自定义空间，PIA 更适合技术型用户或有明确偏好的用户。</div>
+    <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
+      <a href="{{ go_defaults.pia }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 PIA</a>
+      <a href="/vpn/posts/pia-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看评测</a>
+    </div>
+  </div>
+
+  <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 12px; background: #fff;">
+    <div style="font-weight: 800;">🕵️ 隐私优先（匿名账号模型） — <span style="font-weight: 900; color: #111827;">Mullvad</span></div>
+    <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">Mullvad 的账号体系更偏匿名与隐私友好，适合对“账号与隐私边界”更敏感、且不追求花哨功能的用户。</div>
+    <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
+      <a href="{{ go_defaults.mullvad }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 Mullvad</a>
+      <a href="/vpn/posts/mullvad-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看评测</a>
+    </div>
+  </div>
+
+  <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 12px; background: #fff;">
+    <div style="font-weight: 800;">🧓 老牌简洁（够用就行） — <span style="font-weight: 900; color: #111827;">StrongVPN</span></div>
+    <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">如果你更偏向简单、保守、够用即可的使用取向，StrongVPN 可以作为备选补位方案。</div>
+    <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
+      <a href="{{ go_defaults.strongvpn }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 StrongVPN</a>
+      <a href="/vpn/posts/strongvpn-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看评测</a>
+    </div>
+  </div>
+
+  <div style="border: 1px solid rgba(0,0,0,0.12); border-radius: 10px; padding: 12px; background: #fff;">
+    <div style="font-weight: 800;">🧩 入门与补位（能力有限） — <span style="font-weight: 900; color: #111827;">Atlas VPN</span></div>
+    <div style="margin-top: 6px; line-height: 1.7; color: rgba(0,0,0,0.75);">Atlas 更像入门或临时补位选择：适合预算或需求更轻的用户，但不建议作为长期主力方案。</div>
+    <div style="margin-top: 10px; display:flex; gap: 10px; flex-wrap: wrap;">
+      <a href="{{ go_defaults.atlas }}" target="_blank" rel="nofollow sponsored" style="display:inline-block; padding: 8px 12px; border-radius: 8px; background: #0f766e; color: #fff; text-decoration:none; font-weight: 700;">立即查看 Atlas VPN</a>
+      <a href="/vpn/posts/atlas-review/" style="display:inline-block; padding: 8px 12px; border-radius: 8px; border: 1px solid rgba(0,0,0,0.18); color: #111827; text-decoration:none; font-weight: 700;">查看评测</a>
+    </div>
+  </div>
+</div>
+
 <h2 id="faq">❓八、 常见问题（FAQ）</h2>
 
 <script type="application/ld+json">
