--- a/src/en/recommend/index.html
+++ b/src/en/recommend/index.html
@@ -6,7 +6,7 @@ permalink: /vpn/en/recommend/
 lang: en
 ---
 
-<h1>VPN recommendations & reviews (2026): pick by scenario</h1>
+<h1>VPN recommendations & reviews (2026)</h1>
 
 <div class="notice">
   Note: This page provides reviews and information about VPN / network privacy tools for legitimate use cases such as privacy protection and connection security. Laws and policies vary by region. Please comply with applicable laws and terms of service.
