--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@ description: VPN 推荐与评测指南：按场景选型、评测文章列表与
 <ul>
   <li><a href="/vpn/recommend/">VPN 推荐与评测（按使用场景快速选型）</a></li>
   <li><a href="/vpn/posts/">VPN 评测文章列表（按品牌汇总）</a></li>
-  <li><a href="/vpn/review-methodology/">VPN 评测方法说明（我们如何评测与排序）</a></li>
+  <li><a href="/vpn/review-methodology/">VPN 评测方法说明</a></li>
 </ul>
 
 <h2>使用提醒</h2>
